fix sonarqube issues