@@ -19,7 +19,6 @@ import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 import java.util.stream.StreamSupport;
 
 @RestController
@@ -38,7 +37,7 @@ public class TodolistController {
         Iterable<Todolist> data = getAllTodolistUseCase.request(new GetAllTodolistQuery());
         return StreamSupport.stream(data.spliterator(), true)
                             .map(TodolistDto::of)
-                            .collect(Collectors.toList());
+                            .toList();
     }
 
     @GetMapping("/{id}")
